# C-Sharp-gibb

./: README.md
C-Sharp-gibb/: CMakeLists.txt
C-Sharp-gibb/Gibb Schlue/: Gibb Schlue.sln
C-Sharp-gibb/Gibb Schlue/MitarbeiterDB/: Program.cs
C-Sharp-gibb/Gibb Schlue/SecBerechnen/: P.cs  Program.cs
C-Sharp-gibb/Gibb Schlue/struktogram/: Program.cs
C-Sharp-gibb/Helloworld/: Helloworld.sln  Program.cs
C-Sharp-gibb/Projektname_ab319_4_2/: Program.cs  Projektname_ab319_4_2.sln
C-Sharp-gibb/Sec_per_month/: Program.cs  Sec_per_month.csproj  Sec_per_month.sln
C-Sharp-gibb/Sec_per_month/Properties/: AssemblyInfo.cs
C-Sharp-gibb/Uebung_04_7_Arrays/: Program.cs  Uebung_04_7_Arrays.csproj  Uebung_04_7_Arrays.sln
C-Sharp-gibb/Uebung_04_7_Arrays/Properties/: AssemblyInfo.cs
