cmake_minimum_required(VERSION 3.29)
project(C_Sharp_gibb)

set(CMAKE_CXX_STANDARD 14)
set_target_properties(Helloworld PROPERTIES LINKER_LANGUAGE CXX)
add_executable(C_Sharp_gibb
    .idea/.gitignore
    .idea/C-Sharp-gibb.iml
    .idea/editor.xml
    .idea/modules.xml
    .idea/workspace.xml
    Helloworld/bin/Debug/net8.0/Helloworld.deps.json
    Helloworld/bin/Debug/net8.0/Helloworld.dll
    Helloworld/bin/Debug/net8.0/Helloworld.exe
    Helloworld/bin/Debug/net8.0/Helloworld.pdb
    Helloworld/bin/Debug/net8.0/Helloworld.runtimeconfig.json
    Helloworld/obj/Debug/net8.0/ref/Helloworld.dll
    Helloworld/obj/Debug/net8.0/refint/Helloworld.dll
    Helloworld/obj/Debug/net8.0/.NETCoreApp,Version=v8.0.AssemblyAttributes.cs
    Helloworld/obj/Debug/net8.0/apphost.exe
    Helloworld/obj/Debug/net8.0/Helloworld.AssemblyInfo.cs
    Helloworld/obj/Debug/net8.0/Helloworld.AssemblyInfoInputs.cache
    Helloworld/obj/Debug/net8.0/Helloworld.assets.cache
    Helloworld/obj/Debug/net8.0/Helloworld.csproj.BuildWithSkipAnalyzers
    Helloworld/obj/Debug/net8.0/Helloworld.csproj.CoreCompileInputs.cache
    Helloworld/obj/Debug/net8.0/Helloworld.csproj.FileListAbsolute.txt
    Helloworld/obj/Debug/net8.0/Helloworld.dll
    Helloworld/obj/Debug/net8.0/Helloworld.GeneratedMSBuildEditorConfig.editorconfig
    Helloworld/obj/Debug/net8.0/Helloworld.genruntimeconfig.cache
    Helloworld/obj/Debug/net8.0/Helloworld.GlobalUsings.g.cs
    Helloworld/obj/Debug/net8.0/Helloworld.pdb
    Helloworld/obj/Helloworld.csproj.nuget.dgspec.json
    Helloworld/obj/Helloworld.csproj.nuget.g.props
    Helloworld/obj/Helloworld.csproj.nuget.g.targets
    Helloworld/obj/project.assets.json
    Helloworld/obj/project.nuget.cache
    Helloworld/Helloworld.csproj
    Helloworld/Helloworld.sln
    Helloworld/Program.cs)
